<resources>
    <string name="apply_hint">Apply the hint</string>
    <string name="erase">Erase</string>
    <string name="notes">Notes</string>
    <string name="digit_complete">%1$d, all placed</string>
    <string name="generating">Making a new puzzle</string>
    <string name="win_mistakes">Mistakes: %1$d</string>
    <string name="win_hints">Hints: %1$d</string>
    <!-- Hints -->
    <string name="hint_wrong_digit">This digit is wrong</string>
...
